fixed spacing

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   font-size: 50px;
   color: white;
 }
+
 .buttons {
   display: flex;
   flex-wrap: wrap;
@@ -49,7 +50,7 @@ button {
   background-color: rgb(0, 0, 0);
   font-size: 40px;
   color: white;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 button:hover {
